--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class="container" id="main-container">
-      <header class="container px-2 py-4"><h1 class="title"><a href="/">Where in the world?</a></h1><span class="dark-mode" id="dark-mode-switch"><i class="bi bi-moon"></i>&nbsp;Dark Mode</span></header>
+      <header class="container px-2 py-4"><h1 class="title"><a href="/countries/">Where in the world?</a></h1><span class="dark-mode" id="dark-mode-switch"><i class="bi bi-moon"></i>&nbsp;Dark Mode</span></header>
       <div class="content" id="content-container">
         <div class="input-group mb-3" id="search-wrapper">
             <input id="Search" type="text" class="form-control" placeholder="Search for a country..." aria-label="Search for a country" aria-describedby="basic-addon1">
