--- a/index.html
+++ b/index.html
@@ -55,12 +55,35 @@
                 </div>
               </div>
       </div>
-      
+       <!--Live toast-->
+    <div class="toast position-absolute top-0 end-0" role="alert" aria-live="assertive" aria-atomic="true" autohide="false">
+      <div class="toast-body">
+        Hi! If you like this app, make sure to check out my other apps.
+        <div class="mt-2 pt-2 mb-4 border-top">
+          <button type="button" class="btn btn-primary btn-sm"><a href="https://github.com/ademkoca/" target="_blank">Check out!</a></button>
+          <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Close</button>
+        </div>
+      </div>
+    </div>
+    <!--/Live toast-->  
     </div>
     <footer class="container">
       Developed by: <strong>Adem Koca</strong><span><a href="https://github.com/ademkoca" target="_blank"><i class="fab fa-github" target="_blank"></i></a><span><a href="https://www.linkedin.com/in/ademkoca/" target="_blank"><i class="fab fa-linkedin"></i></a><span><a href="https://www.instagram.com/ademkoca/" target="_blank"><i class="fab fa-instagram"></i></a><span><a href="https://twitter.com/rahatlook" target="_blank"><i class="fab fa-twitter"></i></a></span>
     </footer>
     <script src="app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js"
+      integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u"
+      crossorigin="anonymous"
+    ></script>
     <!-- <script src="OpenWeather.js"></script> -->
+    <script>
+      window.onload = (event) => {
+      let myAlert = document.querySelector('.toast');
+      let bsAlert = new bootstrap.Toast(myAlert);
+      bsAlert.show();
+      
+      }
+          </script>
   </body>
 </html>
