--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="toast-body">
         Hi! If you like this app, make sure to check out my other apps.
         <div class="mt-2 pt-2 mb-4 border-top">
-          <button type="button" class="btn btn-primary btn-sm"><a href="https://github.com/ademkoca/" target="_blank">Check out!</a></button>
+          <button type="button" class="btn btn-primary btn-sm"><a href="https://ademkoca.github.io/portfolio" target="_blank">Check out!</a></button>
           <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Close</button>
         </div>
       </div>
